--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
             <img src="images_asset/logo.png" alt="Hackathon Logo" class="full-width-image logo">
             <div class="content">
                 <section id="About">
+                    <section id ="Form">
+                        <br><br><br>
+                        <button class="styled-input2">
+                            <a href="https://forms.gle/ebMkjm6LtDdUMbPM8">Register Here!</a>
+                        </button>
+                        </section>
                     <h1>About</h1>
                     <p>Welcome to the <h3 class="fade">GMU CS Clubs Premier Hackathon!</h3>
                         Hackfax welcomes students all over the GMU FairFax Area and beyond!<br>
@@ -207,6 +213,7 @@
                 </section>
                 <section id="Sponsors">
                     <h1>Sponsors</h1>
+                <a href = "https://drive.google.com/file/d/1fl4sPqCtEuSsFWUYHtP1Ji8E6pUiUL6U/view?usp=sharing"><p>Sponsor Prospectus Packet!</p></a>
                             <img src="images_asset/Coming_soon.png" id="coming" alt="Hackathon Header" class="full-width-image" id ="head">
                         
                 </section>
@@ -227,7 +234,7 @@
                         <!-- Question 3 -->
                         <div class="faq-item">
                             <a href="javascript:void(0)" onclick="toggleAnswer('answer3')">Where/when is it going to be?</a>
-                            <p id="answer3" class="faq-answer" style="display:none;">Our hackathon will take place at George Mason Fairfax campus from February 16th to 28th. More specifically, we will be in Dewberry hall in the Johnson center, and Horizon Hall</p>
+                            <p id="answer3" class="faq-answer" style="display:none;">Our hackathon will take place at George Mason Fairfax campus from February 16th to 18th. More specifically, we will be in Dewberry hall in the Johnson center, and Horizon Hall</p>
                         </div>                    
                         <!-- Question 4 -->
                         <div class="faq-item">
@@ -259,10 +266,10 @@
                 </section>
 -->
                 <section id ="Form">
-                        <h1>Registration Form</h1>
+                        <h1 id="Volunteering">Volunteer Form</h1>
                         <br><br><br>
                         <button class="styled-input2">
-                            <a href="https://forms.gle/ebMkjm6LtDdUMbPM8">Register Here!</a>
+                            <a href="https://forms.gle/4c54cpT8QRihLgda7">Sign up Here!</a>
                         </button>
                         <br><br><br>
                                             
@@ -296,6 +303,7 @@
         <a href="#Schedule">Schedule</a>
         <a href="#Tracks">Tracks</a>
          <a href="#Sponsors">Sponsors</a>
+         <a href="#Volunteering">Volunteer</a>
         <a href="#Faq">Faq</a>
 
 
@@ -311,6 +319,7 @@
 <div class="skyline1-container" id="skyline1Container"></div>
 <div class="skyline2-container" id="skyline2Container"></div>
 <div class="skyline1-container" id="skyline1Container"></div>
+<div class="skyline2-container" id="skyline2Container"></div>
 
 <script src="script.js"></script>
 
