--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <section id="About">
                     <section id ="Form">
                         <br><br><br>
-                        <button class="styled-input2">
-                            <a href="https://forms.gle/ebMkjm6LtDdUMbPM8">Register Here!</a>
-                        </button>
+                        <a href="https://forms.gle/ebMkjm6LtDdUMbPM8"><button class="styled-input2">
+                            <p>Register Here!</p>
+                        </button></a>
                         </section>
                     <h1>About</h1>
                     <p>Welcome to the <h3 class="fade">GMU CS Clubs Premier Hackathon!</h3>
@@ -268,9 +268,9 @@
                 <section id ="Form">
                         <h1 id="Volunteering">Volunteer Form</h1>
                         <br><br><br>
-                        <button class="styled-input2">
-                            <a href="https://forms.gle/4c54cpT8QRihLgda7">Sign up Here!</a>
-                        </button>
+                        <a href="https://forms.gle/4c54cpT8QRihLgda7"><button class="styled-input2">
+                            <p>Sign up Here!</p>
+                        </button></a>
                         <br><br><br>
                                             
 
