--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
                 <section id="About">
                     <section id ="Form">
                         <br><br><br>
-                        <a href="https://forms.gle/ebMkjm6LtDdUMbPM8"><button class="styled-input2">
+                        <button class="styled-input2" onclick="window.location.href='https://forms.gle/ebMkjm6LtDdUMbPM8';">
                             <p>Register Here!</p>
-                        </button></a>
+                        </button>
+                        
                         </section>
                     <h1>About</h1>
                     <p>Welcome to the <h3 class="fade">GMU CS Clubs Premier Hackathon!</h3>
@@ -213,8 +214,8 @@
                 </section>
                 <section id="Sponsors">
                     <h1>Sponsors</h1>
-                <a href = "https://drive.google.com/file/d/1fl4sPqCtEuSsFWUYHtP1Ji8E6pUiUL6U/view?usp=sharing"><p>Sponsor Prospectus Packet!</p></a>
-                            <img src="images_asset/Coming_soon.png" id="coming" alt="Hackathon Header" class="full-width-image" id ="head">
+                    <a href="HackFax Sponsor Prospectus.pdf" target="_blank"><p>Sponsor Prospectus Packet!</p></a>
+                    <img src="images_asset/Coming_soon.png" id="coming" alt="Hackathon Header" class="full-width-image" id ="head">
                         
                 </section>
                 <section id="Faq">
