--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                 <section id="About">
                     <section id ="Form">
                         <br><br><br>
-                        <button class="styled-input2" onclick="window.location.href='https://forms.gle/ebMkjm6LtDdUMbPM8';">
+                        <button class="styled-input2" onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLScOf18al9_471cNl5fZMQdnLAOMVYrkIHTGuUHNHYXeHwjl7Q/viewform';">
+                            
                             <p>Register Here!</p>
                         </button>
                         
