--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                         <h1 id="Volunteering">Volunteer Form</h1>
                         <br><br><br>
                         <button class="styled-input2" onclick="window.location.href='https://linktr.ee/Hackfax';">
-                            <p>Register Here!</p>
+                            <p>Volunteer Form!</p>
                         </button>
 
                         <br><br><br>
