--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 <section id="About">
                     <section id ="Form">
                         <br><br><br>
-                        <button class="styled-input2" onclick="window.location.href='https://linktr.ee/Hackfax';">
-                            <p>Register Here!</p>
+                        <button class="styled-input2">
+                            <a href="https://linktr.ee/Hackfax"><p>Register Here!</p></a>
                         </button>
                         
                         </section>
@@ -269,8 +269,8 @@
                 <section id ="Form">
                         <h1 id="Volunteering">Volunteer Form</h1>
                         <br><br><br>
-                        <button class="styled-input2" onclick="window.location.href='https://linktr.ee/Hackfax';">
-                            <p>Volunteer Form!</p>
+                        <button class="styled-input2">
+                            <a href="https://linktr.ee/Hackfax"><p>Volunteer Form!</p></a>
                         </button>
 
                         <br><br><br>
