--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
                 <section id="About">
                     <section id ="Form">
                         <br><br><br>
-                        <button class="styled-input2">
-                            <a href="https://linktr.ee/Hackfax"><p>Register Here!</p></a>
-                        </button>
+                        <a href="https://linktr.ee/Hackfax"><h1>Registration and Volunteering:<br> linktr.ee/Hackfax</h1></a>
                         
                         </section>
                     <h1>About</h1>
@@ -266,17 +264,7 @@
                     <p>Information about how to follow the event...</p>
                 </section>
 -->
-                <section id ="Form">
-                        <h1 id="Volunteering">Volunteer Form</h1>
-                        <br><br><br>
-                        <button class="styled-input2">
-                            <a href="https://linktr.ee/Hackfax"><p>Volunteer Form!</p></a>
-                        </button>
 
-                        <br><br><br>
-                                            
-
-                </section>
             </div>
             <br><br><br><br><br><br><br><br><br>
 
@@ -305,7 +293,6 @@
         <a href="#Schedule">Schedule</a>
         <a href="#Tracks">Tracks</a>
          <a href="#Sponsors">Sponsors</a>
-         <a href="#Volunteering">Volunteer</a>
         <a href="#Faq">Faq</a>
 
 
