--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <section id="About">
                     <section id ="Form">
                         <br><br><br>
-                        <a href="https://linktr.ee/Hackfax"><h1>Registration and Volunteering:<br> linktr.ee/Hackfax</h1></a>
+                        <a href="https://linktr.ee/Hackfax" target="_blank"><h1>Registration and Volunteering:<br> linktr.ee/Hackfax</h1></a>
                         
                         </section>
                     <h1>About</h1>
